# midpen-tracker

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AUDIT_REPORT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  cloudbuild.yaml  justfile  permissions-policy.txt  verify_frontend.py
.Jules/: palette.md  sentinel.md
.agent-shell/transcripts/: 2026-01-25-11-51-46.md  2026-01-25-11-57-54.md  2026-01-27-00-12-07.md
.githooks/: pre-commit
.github/workflows/: ci.yml
.jules/: palette.md  sentinel.md
benches/: preserve_benchmark.rs
data/: midpen_boundaries.geojson  midpen_boundaries_raw.geojson
docs/adr/: 001-token-caching-with-lazy-decryption.md  002-cloud-tasks-oidc-verification.md  README.md
infra/: backend.conf.example  cloudbuild.tf  cloudflare.tf  cloudrun.tf  firestore.tf  iam.tf  main.tf  monitoring.tf  resources.tf  terraform.tfvars.example  versions.tf
scripts/: debug-token.py  fetch-activity.py  generate-security-config.js  midpen.py  test-with-emulator.sh
src/: check_select_transaction.rs  config.rs  error.rs  lib.rs  main.rs  time_utils.rs
src/db/: firestore.rs  mod.rs
src/middleware/: auth.rs  mod.rs  security.rs  tasks_auth.rs
src/models/: activity.rs  mod.rs  preserve.rs  stats.rs  user.rs
src/routes/: api.rs  auth.rs  mod.rs  tasks.rs  webhook.rs
src/services/: activity.rs  google_oidc.rs  kms.rs  mod.rs  preserve.rs  strava.rs  tasks.rs
tests/: api_auth_tests.rs  api_pagination_tests.rs  api_validation_tests.rs  auth_cookie_tests.rs  concurrent_stats_test.rs  device_name_test.rs  error_tests.rs  firestore_integration.rs  jwt_auth_tests.rs  kms_aad_test.rs  oauth_state_tests.rs  preserve_detection_tests.rs  preserve_integration.rs  tasks_security_tests.rs  token_cache_invalidation_test.rs  user_deletion_tests.rs  validation_tests.rs  webhook_integration.rs
tests/common/: mod.rs
tests/fixtures/: activity_15893279201.json  activity_16804567307.json  activity_16906743520.json  activity_17015064138.json  expected_preserves.json
web/: .env.example  .prettierignore  eslint.config.js  generate-favicons.sh  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  svelte.config.js  tailwind.config.js  verify_activities.py  vite.config.ts  wrangler.toml
web/functions/: _middleware.ts  security-config.ts
web/scripts/: fouc.min.js  get-fouc-hash.sh
web/src/: app.css  app.d.ts  app.html
web/src/lib/: api.ts  cache.svelte.ts  index.ts  mockData.ts  state.svelte.ts  types.ts
web/src/lib/actions/: focusTrap.ts
web/src/lib/assets/: about.md  legal.md
web/src/lib/components/: AboutModal.svelte  Button.svelte  Card.svelte  DeleteAccountModal.svelte  EmptyState.svelte  ProfileDropdown.svelte  SocialLink.svelte  Spinner.svelte  YearPill.svelte  index.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/account-deletion-in-progress/: +page.svelte
web/src/routes/callback/: +page.svelte
web/src/routes/dashboard/: +page.svelte  ActivityList.svelte
web/src/routes/legal/: +page.svelte
web/static/: _headers  _routes.json  fouc-debug.js  fouc.js  site.webmanifest
