[package]
name = "midpen-strava"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Auth & JWT
jsonwebtoken = "9"

# Geo processing
geo = "0.29"
geojson = "0.24"
polyline = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for Strava API)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Base64 encoding
base64 = "0.22"

# URL encoding
urlencoding = "2"

# Config
dotenvy = "0.15"

# Date/time handling
chrono = "0.4"

# Binary data
bytes = "1"

# GCP SDK
firestore = { version = "0.43", default-features = false }
gcloud-sdk = { version = "0.25", default-features = false, features = ["tls-webpki-roots"] }
google-cloud-tasks-v2 = { version = "1", default-features = false }
google-cloud-kms = { version = "0.6.0", default-features = false, features = ["rustls-tls", "auth"] }
google-cloud-googleapis = "0.16"
futures-util = "0.3.31"
