[package]
name = "midpen-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
ring = "0.17"
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }

# Auth & JWT
jsonwebtoken = "9"

# Geo processing
geo = "0.32"
geojson = "0.24"
polyline = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for Strava API)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Base64 encoding
base64 = "0.22"

# URL encoding
urlencoding = "2"

# Config
dotenvy = "0.15"

# Date/time handling
chrono = "0.4"
time = "0.3"

# Binary data
bytes = "1"

# GCP SDK
firestore = { version = "0.47", default-features = false }
gcloud-sdk = { version = "0.28", default-features = false, features = ["tls-webpki-roots"] }
google-cloud-tasks-v2 = { version = "1", default-features = false }
google-cloud-kms = { version = "0.6.0", default-features = false, features = ["rustls-tls", "auth"] }
google-cloud-googleapis = "0.16"
futures-util = "0.3.31"

# TypeScript bindings generation
# TypeScript bindings generation
ts-rs = { version = "11.1", features = ["serde-compat"], optional = true }
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
hkdf = "0.12.4"
subtle = "2"

[features]
binding-generation = ["ts-rs"]
