[package]
name = "midpen-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
ring = "0.17"
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }

# Auth & JWT
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }

# Geo processing
geo = "0.32"
geojson = "0.24"
polyline = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for Strava API)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# Tracing/Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Base64 encoding
base64 = "0.22"

# URL encoding
urlencoding = "2"

# Config
dotenvy = "0.15"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# GCP SDK
firestore = { version = "0.48", default-features = false }
gcloud-sdk = { version = "0.29", default-features = false, features = ["tls-webpki-roots"] }
google-cloud-tasks-v2 = { version = "1", default-features = false }
futures-util = "0.3.31"

# Concurrent data structures
dashmap = "6"

# Validation
validator = { version = "0.20", features = ["derive"] }

# TypeScript bindings generation
# TypeScript bindings generation
ts-rs = { version = "11.1", features = ["serde-compat"], optional = true }
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"
hkdf = "0.13.0"
subtle = "2"
google-cloud-gax = "1.7.0"
google-cloud-kms-v1 = "1.11.0"

[features]
binding-generation = ["ts-rs"]

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "preserve_benchmark"
harness = false
